unpackaged/main/default/objects/Accountt__c/Accountt__c.object-meta.xml
<CustomObject>
    <label>Accountt</label>
    <nameField>
        <label>Accountt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accountts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>