unpackaged/main/default/objects/Accountt__c/fields/A123__c.field-meta.xml
<CustomField>
    <fullName>A123__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A123</label>
    <type>Checkbox</type>
</CustomField>