unpackaged/main/default/objects/Accountt__c/fields/Acountt_Type__c.field-meta.xml
<CustomField>
    <fullName>Acountt_Type__c</fullName>
    <label>Acountt_Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saving Account</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Minor Saving Acc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>