unpackaged/main/default/objects/Accountt__c/fields/Average_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Deposit_Amount__c</fullName>
    <label>Average Deposit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>