unpackaged/main/default/objects/Accountt__c/fields/Average_Withdrawal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Withdrawal_Amount__c</fullName>
    <label>Average Withdrawal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>