unpackaged/main/default/objects/Accountt__c/fields/Minium_Balance__c.field-meta.xml
<CustomField>
    <fullName>Minium_Balance__c</fullName>
    <label>Minium Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>